--- a/about.html
+++ b/about.html
@@ -181,9 +181,9 @@
                 </div>
               </div>
               <div class="card">
-                <div class="card-header" role="tab" id="headingThree">
+                <div class="card-header text-center" role="tab" id="headingThree">
                   <h5 class="mb-0">
-                    <a class="collapsed text-center" style="color: #262626;" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                       <strong>Plan</strong> de <strong>estudios</strong>
                     </a>
                   </h5>
@@ -191,8 +191,8 @@
                 <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
                   <div class="card-body">
                     <div class="text-heading text-muted text-lg" id="exampleAccordionS" data-children=".item">
-                      <div class="item">
-                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS1" aria-expanded="true" aria-controls="exampleAccordionS1">
+                      <div class="item text-center">
+                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS1" aria-expanded="true" aria-controls="exampleAccordionS1">
                           Materias de Primer Semestre
                         </a>
                         <div id="exampleAccordionS1" class="collapse" role="tabpanel">
@@ -209,8 +209,8 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item">
-                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS2" aria-expanded="false" aria-controls="exampleAccordionS2">
+                      <div class="item text-center">
+                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS2" aria-expanded="false" aria-controls="exampleAccordionS2">
                           Materias de Segundo Semestre
                         </a>
                         <div id="exampleAccordionS2" class="collapse" role="tabpanel">
@@ -227,8 +227,8 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item">
-                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS3" aria-expanded="false" aria-controls="exampleAccordionS3">
+                      <div class="item text-center">
+                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS3" aria-expanded="false" aria-controls="exampleAccordionS3">
                           Materias de Tercer Semestre
                         </a>
                         <div id="exampleAccordionS3" class="collapse" role="tabpanel">
@@ -245,8 +245,8 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item">
-                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS4" aria-expanded="false" aria-controls="exampleAccordionS4">
+                      <div class="item text-center">
+                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS4" aria-expanded="false" aria-controls="exampleAccordionS4">
                           Materias de Cuarto Semestre
                         </a>
                         <div id="exampleAccordionS4" class="collapse" role="tabpanel">
@@ -262,8 +262,8 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item">
-                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS5" aria-expanded="false" aria-controls="exampleAccordionS5">
+                      <div class="item text-center">
+                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS5" aria-expanded="false" aria-controls="exampleAccordionS5">
                           Materias de Quinto Semestre
                         </a>
                         <div id="exampleAccordionS5" class="collapse" role="tabpanel">
@@ -279,8 +279,8 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item">
-                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS6" aria-expanded="false" aria-controls="exampleAccordionS6">
+                      <div class="item text-center">
+                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS6" aria-expanded="false" aria-controls="exampleAccordionS6">
                           Materias de Sexto Semestre
                         </a>
                         <div id="exampleAccordionS6" class="collapse" role="tabpanel">
@@ -296,8 +296,8 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item">
-                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS7" aria-expanded="false" aria-controls="exampleAccordionS7">
+                      <div class="item text-center">
+                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS7" aria-expanded="false" aria-controls="exampleAccordionS7">
                           Materias de Septimo Semestre
                         </a>
                         <div id="exampleAccordionS7" class="collapse" role="tabpanel">
@@ -312,8 +312,8 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item">
-                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS8" aria-expanded="false" aria-controls="exampleAccordionS8">
+                      <div class="item text-center">
+                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS8" aria-expanded="false" aria-controls="exampleAccordionS8">
                           Materias de Octavo Semestre
                         </a>
                         <div id="exampleAccordionS8" class="collapse" role="tabpanel">
@@ -328,8 +328,8 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item">
-                        <a class="text-center" class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS9" aria-expanded="false" aria-controls="exampleAccordionS9">
+                      <div class="item text-center">
+                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS9" aria-expanded="false" aria-controls="exampleAccordionS9">
                           Materias de Noveno Semestre
                         </a>
                         <div id="exampleAccordionS9" class="collapse" role="tabpanel">
@@ -341,8 +341,8 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item">
-                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS0" aria-expanded="false" aria-controls="exampleAccordionS0">
+                      <div class="item text-center">
+                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS0" aria-expanded="false" aria-controls="exampleAccordionS0">
                           Materias Optativas
                         </a>
                         <div id="exampleAccordionS0" class="collapse" role="tabpanel">
@@ -402,8 +402,8 @@
                   </div>
                 </div>
               </div>
-              <div class="card text-center">
-                <div class="card-header" role="tab" id="headingFour">
+              <div class="card">
+                <div class="card-header text-center" role="tab" id="headingFour">
                   <h5 class="mb-0">
                     <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                       Planta <strong>Docente</strong>
