--- a/about.html
+++ b/about.html
@@ -191,7 +191,7 @@
                 <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
                   <div class="card-body">
                     <div class="text-heading text-muted text-lg" id="exampleAccordionS" data-children=".item">
-                      <div class="item text-center">
+                      <div class="item">
                         <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS1" aria-expanded="true" aria-controls="exampleAccordionS1">
                           Materias de Primer Semestre
                         </a>
