--- a/about.html
+++ b/about.html
@@ -192,11 +192,11 @@
                   <div class="card-body">
                     <div class="text-heading text-muted text-lg" id="exampleAccordionS" data-children=".item">
                       <div class="item">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS1" aria-expanded="true" aria-controls="exampleAccordionS1">
+                        <a class="text-heading text-muted text-lg" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS1" aria-expanded="true" aria-controls="exampleAccordionS1">
                           Materias de Primer Semestre
                         </a>
                         <div id="exampleAccordionS1" class="collapse" role="tabpanel">
-                          <p class="mb-3">
+                          <p class="mb-3 text-heading text-muted text-lg">
                             <ul>
                               <li>Culturas Precolombinas.</li>
                               <li>Teoría de la Historia.</li>
@@ -209,12 +209,12 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item text-center">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS2" aria-expanded="false" aria-controls="exampleAccordionS2">
+                      <div class="item">
+                        <a class="text-heading text-muted text-lg" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS2" aria-expanded="false" aria-controls="exampleAccordionS2">
                           Materias de Segundo Semestre
                         </a>
                         <div id="exampleAccordionS2" class="collapse" role="tabpanel">
-                          <p class="mb-3">
+                          <p class="mb-3 text-heading text-muted text-lg">
                             <ul>
                               <li>Misiones y Colonia.</li>
                               <li>Teoría de la Historia II.</li>
@@ -227,12 +227,12 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item text-center">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS3" aria-expanded="false" aria-controls="exampleAccordionS3">
+                      <div class="item">
+                        <a class="text-heading text-muted text-lg" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS3" aria-expanded="false" aria-controls="exampleAccordionS3">
                           Materias de Tercer Semestre
                         </a>
                         <div id="exampleAccordionS3" class="collapse" role="tabpanel">
-                          <p class="mb-3">
+                          <p class="mb-3 text-heading text-muted text-lg">
                             <ul>
                               <li>Colonia.</li>
                               <li>Independencia y Estado.</li>
@@ -245,12 +245,12 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item text-center">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS4" aria-expanded="false" aria-controls="exampleAccordionS4">
+                      <div class="item">
+                        <a class="text-heading text-muted text-lg" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS4" aria-expanded="false" aria-controls="exampleAccordionS4">
                           Materias de Cuarto Semestre
                         </a>
                         <div id="exampleAccordionS4" class="collapse" role="tabpanel">
-                          <p class="mb-3">
+                          <p class="mb-3 text-heading text-muted text-lg">
                             <ul>
                               <li>Revolución Americana e Independencia.</li>
                               <li>Procesos Migratorios.</li>
@@ -262,12 +262,12 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item text-center">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS5" aria-expanded="false" aria-controls="exampleAccordionS5">
+                      <div class="item">
+                        <a class="text-heading text-muted text-lg" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS5" aria-expanded="false" aria-controls="exampleAccordionS5">
                           Materias de Quinto Semestre
                         </a>
                         <div id="exampleAccordionS5" class="collapse" role="tabpanel">
-                          <p class="mb-3">
+                          <p class="mb-3 text-heading text-muted text-lg">
                             <ul>
                               <li>Ecología I.</li>
                               <li>Instrumentación Didáctica.</li>
@@ -279,12 +279,12 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item text-center">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS6" aria-expanded="false" aria-controls="exampleAccordionS6">
+                      <div class="item">
+                        <a class="text-heading text-muted text-lg" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS6" aria-expanded="false" aria-controls="exampleAccordionS6">
                           Materias de Sexto Semestre
                         </a>
                         <div id="exampleAccordionS6" class="collapse" role="tabpanel">
-                          <p class="mb-3">
+                          <p class="mb-3 text-heading text-muted text-lg">
                             <ul>
                               <li>Ecología II.</li>
                               <li>Didáctica de la Historia.</li>
@@ -296,12 +296,12 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item text-center">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS7" aria-expanded="false" aria-controls="exampleAccordionS7">
+                      <div class="item">
+                        <a class="text-heading text-muted text-lg" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS7" aria-expanded="false" aria-controls="exampleAccordionS7">
                           Materias de Septimo Semestre
                         </a>
                         <div id="exampleAccordionS7" class="collapse" role="tabpanel">
-                          <p class="mb-3">
+                          <p class="mb-3 text-heading text-muted text-lg">
                             <ul>
                               <li>Praxis Educativa.</li>
                               <li>Movimientos Sociales en Latinoamérica.</li>
@@ -312,12 +312,12 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item text-center">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS8" aria-expanded="false" aria-controls="exampleAccordionS8">
+                      <div class="item">
+                        <a class="text-heading text-muted text-lg" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS8" aria-expanded="false" aria-controls="exampleAccordionS8">
                           Materias de Octavo Semestre
                         </a>
                         <div id="exampleAccordionS8" class="collapse" role="tabpanel">
-                          <p class="mb-3">
+                          <p class="mb-3 text-heading text-muted text-lg">
                             <ul>
                               <li>Seminario de Praxis Educativa.</li>
                               <li>Postcolonialismo y Descolonización.</li>
@@ -328,12 +328,12 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item text-center">
-                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS9" aria-expanded="false" aria-controls="exampleAccordionS9">
+                      <div class="item">
+                        <a class="text-heading text-muted text-lg" class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS9" aria-expanded="false" aria-controls="exampleAccordionS9">
                           Materias de Noveno Semestre
                         </a>
                         <div id="exampleAccordionS9" class="collapse" role="tabpanel">
-                          <p class="mb-3">
+                          <p class="mb-3 text-heading text-muted text-lg">
                             <ul>
                               <li>Historia de EEUU y México.</li>
                               <li>Taller de Tesis II.</li>
@@ -341,12 +341,12 @@
                           </p>
                         </div>
                       </div>
-                      <div class="item text-center">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS0" aria-expanded="false" aria-controls="exampleAccordionS0">
+                      <div class="item">
+                        <a class="text-heading text-muted text-lg" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS0" aria-expanded="false" aria-controls="exampleAccordionS0">
                           Materias Optativas
                         </a>
                         <div id="exampleAccordionS0" class="collapse" role="tabpanel">
-                          <p class="mb-3">
+                          <p class="mb-3 text-heading text-muted text-lg">
                             <ul>
                               <li>Historia y Memoria.</li>
                               <li>Historia Crítica.</li>
@@ -626,7 +626,7 @@
                     <div class="container">
                       <div class="card">
                         <div class="card-body">
-                          <h4 class="card-title text-center">Docentes</h4>
+                          <h4 class="card-title text-center">Planta Docente Completa</h4>
                           <p class="card-text text-left text-heading text-muted text-lg">
                             <ul>
                               <li>Alicia de los Ríos Merino</li>
@@ -685,7 +685,7 @@
                       <div class="card text-center">
                         <div class="card-header" role="tab" id="headingOneV1">
                           <h5 class="mb-0">
-                            <a data-toggle="collapse" href="#collapseOneV1" aria-expanded="false" aria-controls="collapseOneV1">
+                            <a class="text-heading text-muted text-lg" data-toggle="collapse" href="#collapseOneV1" aria-expanded="false" aria-controls="collapseOneV1">
                               <strong>Testimonios de Maestros</strong>
                             </a>
                           </h5>
@@ -711,7 +711,7 @@
                       <div class="card text-center">
                         <div class="card-header" role="tab" id="headingTwoV2">
                           <h5 class="mb-0">
-                            <a class="collapsed" data-toggle="collapse" href="#collapseTwoV2" aria-expanded="false" aria-controls="collapseTwoV2">
+                            <a class="text-heading text-muted text-lg" class="collapsed" data-toggle="collapse" href="#collapseTwoV2" aria-expanded="false" aria-controls="collapseTwoV2">
                               <strong>Testimonios de Alumnos</strong>
                             </a>
                           </h5>
@@ -736,7 +736,7 @@
                       <div class="card text-center">
                         <div class="card-header" role="tab" id="headingThreeV3">
                           <h5 class="mb-0">
-                            <a class="collapsed" data-toggle="collapse" href="#collapseThreeV3" aria-expanded="false" aria-controls="collapseThreeV3">
+                            <a class="text-heading text-muted text-lg" class="collapsed" data-toggle="collapse" href="#collapseThreeV3" aria-expanded="false" aria-controls="collapseThreeV3">
                               <strong>Testimonios de Egresados</strong>
                             </a>
                           </h5>
