--- a/about.html
+++ b/about.html
@@ -627,7 +627,7 @@
                       <div class="card">
                         <div class="card-body">
                           <h4 class="card-title text-center">Planta Docente Completa</h4>
-                          <p class="card-text text-left text-heading text-muted text-lg">
+                          <p class="card-text text-heading text-muted text-lg">
                             <ul>
                               <li>Alicia de los Ríos Merino</li>
                               <li>Nidia Paola Juárez Méndez</li>
