--- a/about.html
+++ b/about.html
@@ -627,29 +627,31 @@
                       <div class="card">
                         <div class="card-body">
                           <h4 class="card-title text-center">Planta Docente Completa</h4>
-                          <p class="card-text text-heading text-muted text-lg">
-                            <ul>
-                              <li>Alicia de los Ríos Merino</li>
-                              <li>Nidia Paola Juárez Méndez</li>
-                              <li>Hugo Mendoza Flores</li>
-                              <li>Socorro Pimentel Pereda</li>
-                              <li>Cristian Alexander Beck Canales</li>
-                              <li>Eduardo Limas</li>
-                              <li>Vladimir Alejandro Armendáriz</li>
-                              <li>Sandra Treviño Beatres</li>
-                              <li>José Gamboa García</li>
-                              <li>Sergio Reaza</li>
-                              <li>Miguel Ángel Valdés Hanson</li>
-                              <li>Isidora Ruvalcaba</li>
-                              <li>Marco Antonio Gutiérrez</li>
-                              <li>Julio César Gómez</li>
-                              <li>Beatriz Rodríguez Varela</li>
-                              <li>Izabela Tzock</li>
-                              <li>Braulio Cañas Martínez</li>
-                              <li>Victoria Montemayor Galicia</li>
-                              <li>Irasema Almora Hernández</li>
-                              <li>Valentín Ramírez</li>
-                            </ul>
+                          <p class="card-text">
+                            <div class="text-heading text-muted text-lg">
+                              <ul>
+                                <li>Alicia de los Ríos Merino</li>
+                                <li>Nidia Paola Juárez Méndez</li>
+                                <li>Hugo Mendoza Flores</li>
+                                <li>Socorro Pimentel Pereda</li>
+                                <li>Cristian Alexander Beck Canales</li>
+                                <li>Eduardo Limas</li>
+                                <li>Vladimir Alejandro Armendáriz</li>
+                                <li>Sandra Treviño Beatres</li>
+                                <li>José Gamboa García</li>
+                                <li>Sergio Reaza</li>
+                                <li>Miguel Ángel Valdés Hanson</li>
+                                <li>Isidora Ruvalcaba</li>
+                                <li>Marco Antonio Gutiérrez</li>
+                                <li>Julio César Gómez</li>
+                                <li>Beatriz Rodríguez Varela</li>
+                                <li>Izabela Tzock</li>
+                                <li>Braulio Cañas Martínez</li>
+                                <li>Victoria Montemayor Galicia</li>
+                                <li>Irasema Almora Hernández</li>
+                                <li>Valentín Ramírez</li>
+                              </ul>
+                            </div>
                           </p>
                         </div>
                       </div>
