--- a/blog.html
+++ b/blog.html
@@ -75,7 +75,7 @@
             </div>
 
             <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-              <div class="card-body">
+              <div class="card-body" Style="opacity: 0.6;">
                 (Temporalmente vacío, se anexarán publicaciónes con el tiempo.)
               </div>
             </div>
@@ -89,7 +89,7 @@
               </h5>
             </div>
             <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
-              <div class="card-body">
+              <div class="card-body" Style="opacity: 0.6;">
                 (Temporalmente vacío, se anexarán cuestiones base con el tiempo.)
               </div>
             </div>
@@ -103,7 +103,7 @@
               </h5>
             </div>
             <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
-              <div class="card-body">
+              <div class="card-body" Style="opacity: 0.6;">
 
                 <div class="container">
 
