--- a/blog.html
+++ b/blog.html
@@ -103,7 +103,7 @@
               </h5>
             </div>
             <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
-              <div class="card-body" Style="background-color: transparent;">
+              <div class="card-body" Style="background: url('../img/bg.jpg'); background-attachment: fixed;">
 
                 <div class="container">
 
