--- a/blog.html
+++ b/blog.html
@@ -102,8 +102,8 @@
                 </a>
               </h5>
             </div>
-            <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
-              <div class="card-body" Style="background: url('../img/bg.jpg'); background-attachment: fixed;">
+            <div id="collapseThree" style="background: url('../img/bg.jpg'); background-attachment: fixed;" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
+              <div class="card-body" style="background: url('../img/bg.jpg'); background-attachment: fixed;">
 
                 <div class="container">
 
