--- a/blog.html
+++ b/blog.html
@@ -66,44 +66,44 @@
     
         <div id="accordion" role="tablist">
           <div class="card">
-            <div class="card-header" role="tab" id="headingOne">
+            <div class="card-header text-center" role="tab" id="headingOne">
               <h5 class="mb-0">
-                <a data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                  Publicaciones de Alumnos y Egresados
+                <a style="color: #262626;" data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                  <strong>Publicaciones</strong> de Alumnos y Egresados
                 </a>
               </h5>
             </div>
 
             <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-              <div class="card-body" Style="opacity: 0.6;">
+              <div class="card-body">
                 (Temporalmente vacío, se anexarán publicaciónes con el tiempo.)
               </div>
             </div>
           </div>
           <div class="card">
-            <div class="card-header" role="tab" id="headingTwo">
+            <div class="card-header text-center" role="tab" id="headingTwo">
               <h5 class="mb-0">
-                <a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Cuestiones base de la Licenciatura
+                <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  <strong>Cuestiones base</strong> de la Licenciatura
                 </a>
               </h5>
             </div>
             <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
-              <div class="card-body" Style="opacity: 0.6;">
+              <div class="card-body">
                 (Temporalmente vacío, se anexarán cuestiones base con el tiempo.)
               </div>
             </div>
           </div>
           <div class="card">
-            <div class="card-header" role="tab" id="headingThree">
+            <div class="card-header text-center" role="tab" id="headingThree">
               <h5 class="mb-0">
-                <a class="collapsed" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  Datos Curiosos
+                <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Datos <strong>Curiosos</strong>
                 </a>
               </h5>
             </div>
-            <div id="collapseThree" style="background: url('../img/bg.jpg'); background-attachment: fixed;" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
-              <div class="card-body" style="background: url('../img/bg.jpg'); background-attachment: fixed;">
+            <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
+              <div class="card-body">
 
                 <div class="container">
 
