--- a/blog.html
+++ b/blog.html
@@ -109,7 +109,7 @@
 
                   <div class="bg-faded p-4 my-4">
                     <div class="card card-inverse">
-                      <img class="card-img img-fluid w-100" src="img/slide-1.jpg" alt="">
+                      <img class="card-img img-fluid w-100" src="img/Curio1.jpg" alt="">
                       <div class="card-img-overlay bg-overlay">
                         <h2 class="card-title text-shadow text-white text-uppercase mb-0">Dato curioso #1</h2>
                         <h4 class="text-shadow text-white">¿Sabías que...</h4>
@@ -120,7 +120,7 @@
 
                   <div class="bg-faded p-4 my-4">
                     <div class="card card-inverse">
-                      <img class="card-img img-fluid w-100" src="img/slide-2.jpg" alt="">
+                      <img class="card-img img-fluid w-100" src="img/Curio2.jpg" alt="">
                       <div class="card-img-overlay bg-overlay">
                         <h2 class="card-title text-shadow text-white text-uppercase mb-0">Dato curioso #2</h2>
                         <h4 class="text-shadow text-white">¿Sabías que...</h4>
@@ -131,7 +131,7 @@
 
                   <div class="bg-faded p-4 my-4">
                     <div class="card card-inverse">
-                      <img class="card-img img-fluid w-100" src="img/slide-3.jpg" alt="">
+                      <img class="card-img img-fluid w-100" src="img/Curio3.jpg" alt="">
                       <div class="card-img-overlay bg-overlay">
                         <h2 class="card-title text-shadow text-white text-uppercase mb-0">Dato curioso #3</h2>
                         <h4 class="text-shadow text-white">¿Sabías que...</h4>
@@ -142,7 +142,7 @@
 
                   <div class="bg-faded p-4 my-4">
                     <div class="card card-inverse">
-                      <img class="card-img img-fluid w-100" src="img/slide-1.jpg" alt="">
+                      <img class="card-img img-fluid w-100" src="img/Curio4.jpg" alt="">
                       <div class="card-img-overlay bg-overlay">
                         <h2 class="card-title text-shadow text-white text-uppercase mb-0">Dato curioso #4</h2>
                         <h4 class="text-shadow text-white">¿Sabías que...</h4>
@@ -153,7 +153,7 @@
 
                   <div class="bg-faded p-4 my-4">
                     <div class="card card-inverse">
-                      <img class="card-img img-fluid w-100" src="img/slide-2.jpg" alt="">
+                      <img class="card-img img-fluid w-100" src="img/Curio5.jpg" alt="">
                       <div class="card-img-overlay bg-overlay">
                         <h2 class="card-title text-shadow text-white text-uppercase mb-0">Dato curioso #5</h2>
                         <h4 class="text-shadow text-white">¿Sabías que...</h4>
@@ -164,7 +164,7 @@
 
                   <div class="bg-faded p-4 my-4">
                     <div class="card card-inverse">
-                      <img class="card-img img-fluid w-100" src="img/slide-3.jpg" alt="">
+                      <img class="card-img img-fluid w-100" src="img/Curio6.jpg" alt="">
                       <div class="card-img-overlay bg-overlay">
                         <h2 class="card-title text-shadow text-white text-uppercase mb-0">Dato curioso #6</h2>
                         <h4 class="text-shadow text-white">¿Sabías que...</h4>
@@ -175,7 +175,7 @@
 
                   <div class="bg-faded p-4 my-4">
                     <div class="card card-inverse">
-                      <img class="card-img img-fluid w-100" src="img/slide-1.jpg" alt="">
+                      <img class="card-img img-fluid w-100" src="img/Curio7.jpg" alt="">
                       <div class="card-img-overlay bg-overlay">
                         <h2 class="card-title text-shadow text-white text-uppercase mb-0">Dato curioso #7</h2>
                         <h4 class="text-shadow text-white">¿Sabías que...</h4>
@@ -186,7 +186,7 @@
 
                   <div class="bg-faded p-4 my-4">
                     <div class="card card-inverse">
-                      <img class="card-img img-fluid w-100" src="img/slide-2.jpg" alt="">
+                      <img class="card-img img-fluid w-100" src="img/Curio8.jpg" alt="">
                       <div class="card-img-overlay bg-overlay">
                         <h2 class="card-title text-shadow text-white text-uppercase mb-0">Dato curioso #8</h2>
                         <h4 class="text-shadow text-white">¿Sabías que...</h4>
@@ -197,7 +197,7 @@
 
                   <div class="bg-faded p-4 my-4">
                     <div class="card card-inverse">
-                      <img class="card-img img-fluid w-100" src="img/slide-3.jpg" alt="">
+                      <img class="card-img img-fluid w-100" src="img/Curio9.jpg" alt="">
                       <div class="card-img-overlay bg-overlay">
                         <h2 class="card-title text-shadow text-white text-uppercase mb-0">Dato curioso #9</h2>
                         <h4 class="text-shadow text-white">¿Sabías que...</h4>
