--- a/blog.html
+++ b/blog.html
@@ -113,7 +113,7 @@
                       <div class="card-img-overlay bg-overlay">
                         <h2 class="card-title text-shadow text-white text-uppercase mb-0">Dato curioso #1</h2>
                         <h4 class="text-shadow text-white">¿Sabías que...</h4>
-                        <p class="lead card-text text-shadow text-white w-50 d-none d-lg-block">El presidente de la tercera sociedad de alumnos de la Facultad de Filosofía y Letras, fue Julio César Gómez Gándara en el periodo de 2013-2014?</p>
+                        <p class="lead card-text text-shadow text-white w-50 d-none d-lg-block">El presidente de la tercera sociedad de alumnos de la Facultad de Filosofía y Letras en el periodo de 2013-2014, fue Julio César Gómez Gándara, alumno de la licenciatura en Historia?</p>
                       </div>
                     </div>
                   </div>
