--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-faded py-lg-4">
       <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Tu Portal Historico</a>
+        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Tu Portal Histórico</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -73,24 +73,21 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid w-100" src="img/slide-1.jpg" alt="">
+              <img class="d-block img-fluid w-100" src="img/Index1.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
-                <h3 class="text-shadow">Primera foto</h3>
-                <p class="text-shadow">Banner de la primera foto</p>
+                <h3 class="text-shadow">El Colectivo Histórico organiza mesa panel en la XXXIX Semana del Humanismo</h3>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid w-100" src="img/slide-2.jpg" alt="">
+              <img class="d-block img-fluid w-100" src="img/Index2.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
-                <h3 class="text-shadow">Segunda foto</h3>
-                <p class="text-shadow">Banner de la segunda foto</p>
+                <h3 class="text-shadow">Grupo de 5to semestre de la Licenciatura en Historia presenta avances de investigación</h3>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid w-100" src="img/slide-3.jpg" alt="">
+              <img class="d-block img-fluid w-100" src="img/Index3.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
-                <h3 class="text-shadow">Tercera foto</h3>
-                <p class="text-shadow">Banner de la tercera foto</p>
+                <h3 class="text-shadow">Mesa de estudiantes para celebrar el día del Historiador</h3>
               </div>
             </div>
           </div>
