--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid w-100" src="img/Index1.jpg" alt="">
+              <img class="d-block img-fluid w-100" style="filter: brightness(50%);" src="img/Index1.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
                 <h3 class="text-shadow">El Colectivo Histórico organiza mesa panel en la XXXIX Semana del Humanismo</h3>
               </div>
