--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid w-100" src="img/Index2.jpg" alt="">
+              <img class="d-block img-fluid w-100" style="filter: brightness(50%);" src="img/Index2.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
                 <h3 class="text-shadow">Grupo de 5to semestre de la Licenciatura en Historia presenta avances de investigación</h3>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid w-100" src="img/Index3.jpg" alt="">
+              <img class="d-block img-fluid w-100" style="filter: brightness(50%);" src="img/Index3.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
                 <h3 class="text-shadow">Mesa de estudiantes para celebrar el día del Historiador</h3>
               </div>
