--- a/galeria.html
+++ b/galeria.html
@@ -72,7 +72,7 @@
         <div class="row">
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/1x1.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -82,7 +82,7 @@
           </div>
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/1x2.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -92,7 +92,7 @@
           </div>
           <div class="col-md-4">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/1x3.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -105,7 +105,7 @@
         <div class="row my-4">
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/2x1.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -115,7 +115,7 @@
           </div>
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/2x2.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -125,7 +125,7 @@
           </div>
           <div class="col-md-4">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/2x3.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -138,7 +138,7 @@
         <div class="row my-4">
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/3x1.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -148,7 +148,7 @@
           </div>
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/3x2.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -158,7 +158,7 @@
           </div>
           <div class="col-md-4">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/3x3.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -171,7 +171,7 @@
         <div class="row my-4">
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/4x1.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -181,7 +181,7 @@
           </div>
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/4x2.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -191,7 +191,7 @@
           </div>
           <div class="col-md-4">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/4x3.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -204,7 +204,7 @@
         <div class="row my-4">
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/5x1.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -214,7 +214,7 @@
           </div>
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/5x2.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -224,7 +224,7 @@
           </div>
           <div class="col-md-4">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/5x3.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -237,7 +237,7 @@
         <div class="row my-4">
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/6x1.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -247,7 +247,7 @@
           </div>
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/6x2.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -257,7 +257,7 @@
           </div>
           <div class="col-md-4">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/6x3.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -270,7 +270,7 @@
         <div class="row my-4">
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/7x1.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -280,7 +280,7 @@
           </div>
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/7x2.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
@@ -290,7 +290,7 @@
           </div>
           <div class="col-md-4">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/7x3.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">John Smith
                   <small class="text-muted">Job Title</small>
