--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <strong>Un Cordial y Caluroso Saludo</strong>
         </h2>
         <hr class="divider">
-        <img class="img-fluid float-left mr-4 d-none d-lg-block" src="img/intro-pic.jpg" alt="">
+        <img class="img-fluid float-left mr-4 d-none d-lg-block" src="img/CHIC.jpg" alt="">
         <p class="text-heading text-muted text-lg">Bienvenido a la página de la Licenciatura en Historia de la Facultad de Filosofía y Letras de la Universidad Autónoma de Chihuahua. </p>
         <p class="text-heading text-muted text-lg">Este portal, tu portal, fue desarrollado para festejar los 10 años de existencia de esta gran carrera. Aquí podrás conocer información diversa, así como eventos, publicaciones, y algunos maestros que aquí imparten su cátedra.</p>
       </div>
