--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,8 @@
 
     <!-- Custom styles for this template -->
     <link href="css/business-casual.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
   </head>
 
@@ -30,7 +32,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-faded py-lg-4">
       <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
+        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Tu Portal Histórico</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -65,63 +67,29 @@
 
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
-        <h2 class="text-center text-lg text-uppercase my-0">Contact
-          <strong>Business Casual</strong>
+        <h2 class="text-center text-lg text-uppercase my-0">
+          <strong>Contactanos</strong>
         </h2>
         <hr class="divider">
         <div class="row">
           <div class="col-lg-8">
             <div class="embed-responsive embed-responsive-16by9 map-container mb-4 mb-lg-0">
-              <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3501.154822814555!2d-106.09065864970484!3d28.655082582322496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86ea43153097ecd7%3A0x7b5e545ba9f3c9f3!2sFaculty+Of+Philosophy+And+Literature!5e0!3m2!1sen!2smx!4v1511239909694" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
           <div class="col-lg-4">
-            <h5 class="mb-0">Phone:</h5>
-            <div class="mb-4">123.456.7890</div>
-            <h5 class="mb-0">Email:</h5>
+            <h5 class="mb-0">M.A. Braulio Cañas Martínez:</h5>
+            <div class="mb-4">Telefono: (614) 413-5450 Ext. 3802</div>
             <div class="mb-4">
-              <a href="mailto:name@example.com">name@example.com</a>
+              <a href="mailto:bcanas@uach.mx">Correo: bcanas@uach.mx</a>
             </div>
-            <h5 class="mb-0">Address:</h5>
+            <h5 class="mb-0">Colectivo CHIC:</h5>
             <div class="mb-4">
-              3481 Melrose Place
-              <br>
-              Beverly Hills, CA 90210
+              <a href="mailto:lichistoriauach@gmail.com">Correo: lichistoriauach@gmail.com</a>
             </div>
+            <div class="mb-4">Facebook: ------</div>
           </div>
         </div>
-      </div>
-
-      <div class="bg-faded p-4 my-4">
-        <hr class="divider">
-        <h2 class="text-center text-lg text-uppercase my-0">Contact
-          <strong>Form</strong>
-        </h2>
-        <hr class="divider">
-        <form>
-          <div class="row">
-            <div class="form-group col-lg-4">
-              <label class="text-heading">Name</label>
-              <input type="text" class="form-control">
-            </div>
-            <div class="form-group col-lg-4">
-              <label class="text-heading">Email Address</label>
-              <input type="email" class="form-control">
-            </div>
-            <div class="form-group col-lg-4">
-              <label class="text-heading">Phone Number</label>
-              <input type="tel" class="form-control">
-            </div>
-            <div class="clearfix"></div>
-            <div class="form-group col-lg-12">
-              <label class="text-heading">Message</label>
-              <textarea class="form-control" rows="6"></textarea>
-            </div>
-            <div class="form-group col-lg-12">
-              <button type="submit" class="btn btn-secondary">Submit</button>
-            </div>
-          </div>
-        </form>
       </div>
 
     </div>
@@ -129,7 +97,7 @@
 
     <footer class="bg-faded text-center py-5">
       <div class="container">
-        <p class="m-0">Copyright &copy; Your Website 2017</p>
+        <p class="m-0">Copyright &copy; Colectivo CHIC 2017</p>
       </div>
     </footer>
 
