--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,6 @@
 
     <!-- Custom styles for this template -->
     <link href="css/business-casual.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
   </head>
@@ -78,16 +77,20 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <h5 class="mb-0">M.A. Braulio Cañas Martínez:</h5>
-            <div class="mb-4">Telefono: (614) 413-5450 Ext. 3802</div>
+            <h5 class="mb-0"><strong>M.A. Braulio Cañas Martínez</strong>, Coordinador de la Licenciatura en Historia:</h5>
+            <div class="mb-4">Telefono:</div>
+            <div class="mb-4">(614) 413-5450 Ext. 3802</div>
+            <div class="mb-4">Correo:</div>
             <div class="mb-4">
               <a href="mailto:bcanas@uach.mx">Correo: bcanas@uach.mx</a>
             </div>
             <h5 class="mb-0">Colectivo CHIC:</h5>
+            <div class="mb-4">Correo:</div>
             <div class="mb-4">
-              <a href="mailto:lichistoriauach@gmail.com">Correo: lichistoriauach@gmail.com</a>
+              <a href="mailto:lichistoriauach@gmail.com">lichistoriauach@gmail.com</a>
             </div>
-            <div class="mb-4">Facebook: ------</div>
+            <div class="mb-4">Facebook:</div>
+            <div class="mb-4">------</div>
           </div>
         </div>
       </div>
