--- a/contact.html
+++ b/contact.html
@@ -79,20 +79,26 @@
           <div class="col-lg-4">
             <h5 class="mb-0"><strong>M.A. Braulio Cañas Martínez</strong>, Coordinador de la Licenciatura en Historia:</h5>
             <div class="row">
-              <div class="mb-4">Telefono:</div>
+              <div class="mb-4">Telefono: </div>
               <div class="mb-4">(614) 413-5450 Ext. 3802</div>
             </div>
-            <div class="mb-4">Correo:</div>
-            <div class="mb-4">
-              <a href="mailto:bcanas@uach.mx">bcanas@uach.mx</a>
+            <div class="row">
+              <div class="mb-4">Correo:</div>
+              <div class="mb-4">
+                <a href="mailto:bcanas@uach.mx">bcanas@uach.mx</a>
+              </div>
             </div>
             <h5 class="mb-0">Colectivo CHIC:</h5>
-            <div class="mb-4">Correo:</div>
-            <div class="mb-4">
-              <a href="mailto:lichistoriauach@gmail.com">lichistoriauach@gmail.com</a>
+            <div class="row">
+              <div class="mb-4">Correo:</div>
+              <div class="mb-4">
+                <a href="mailto:lichistoriauach@gmail.com">lichistoriauach@gmail.com</a>
+              </div>
             </div>
-            <div class="mb-4">Facebook:</div>
-            <div class="mb-4">------</div>
+            <div class="row">
+              <div class="mb-4">Facebook:</div>
+              <div class="mb-4">------</div>
+            </div>
           </div>
         </div>
       </div>
